# rust-cli-resume-alignment

./: .gitignore  Cargo.toml  GETTING_STARTED.md  LICENSE  PHASE2_COMPLETED.md  PHASE3_COMPLETED.md  PHASE4_COMPLETED.md  PHASE5_COMPLETED.md  README.md  TODO.md  test_job.txt
model2vec-rs-main/: Cargo.toml
model2vec-rs-main/src/: main.rs  model.rs
model2vec-rs-main/tests/: common.rs  test_load.rs  test_model.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/input/: file_detector.rs  manager.rs  mod.rs  text_extractor.rs
src/llm/: analyzer.rs  inference.rs  mod.rs  model_manager.rs  prompts.rs
src/output/: formatter.rs  formatter.rs.backup  mod.rs  report.rs
src/processing/: analyzer.rs  ats_matcher.rs  document.rs  embedding_manager.rs  embeddings.rs  mod.rs  text_processor.rs
tests/: integration_tests.rs
tests/fixtures/: minimal_job.txt  minimal_resume.txt  sample_job.txt  sample_resume.md  sample_resume.txt
